fix: issue where statistic values overflowed on smaller widths when the names were long without an icon

--- a/assets/styles/partials/statistics.scss
+++ b/assets/styles/partials/statistics.scss
@@ -1,11 +1,9 @@
 @import "~bootstrap/scss/variables";
 
 .statistic-values {
-  max-width: 300px;
-  background-color: white;
-
   .statistic-value-row {
     transition: opacity 0.3s, box-shadow 0.3s;
+    background-color: white;
 
     &.highlighted {
       box-shadow: 0 0 0 0.2rem rgb(255 0 35 / 41%);
@@ -24,6 +22,13 @@
 
   .input-value {
     border-right: 0;
+  }
+
+  @media (max-width: 575.98px) {
+    .input-group-text {
+      max-width: 200px;
+      overflow-x: scroll;
+    }
   }
 
   .input-group-append {
